PROJECT(Tests)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0 FATAL_ERROR)

SET(TESTS_HOME ${CMAKE_CURRENT_SOURCE_DIR})

# set binary output path
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${TESTS_HOME}/bin")

# common include directories
LIST(APPEND TESTS_INCLUDE_DIRECTORIES "${TESTS_HOME}/../openbabel-2.3.2/include")
LIST(APPEND TESTS_LINK_DIRECTORIES "${TESTS_HOME}/../openbabel-2.3.2/lib")


INCLUDE_DIRECTORIES(${TESTS_INCLUDE_DIRECTORIES})
LINK_DIRECTORIES(${TESTS_LINK_DIRECTORIES})

ADD_EXECUTABLE(obconversion src/obconversion.cpp)
TARGET_LINK_LIBRARIES(obconversion openbabel)

