PROJECT(3mview)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0 FATAL_ERROR)
INCLUDE(../../cmake/commonconf.cmake)

MESSAGE(STATUS "Configuring 3mview Application")

SET(3MVIEW_SOURCES
    main.cpp
)

SET(3MVIEW_HEADERS 
)

# find Qt library
FIND_PACKAGE(Qt4 ${VRN_REQUIRED_QT_VERSION} REQUIRED QtCore QtGui QtOpenGL)

# Qt moc (currently not required)
#QT4_WRAP_CPP(VRN_SIMPLEQT_MOC_SOURCES ${VRN_SIMPLEQT_HEADERS})
#LIST(APPEND VRN_SIMPLEQT_SOURCES ${VRN_SIMPLEQT_MOC_SOURCES})
    
LINK_DIRECTORIES(${OPENBABEL_LIBRARY_DIRECTORY} ${BOOST_LIBRARY_DIRECTORY})
    
ADD_EXECUTABLE(3mview 
    ${3MVIEW_SOURCES} ${3MVIEW_HEADERS} 
) 
ADD_DEFINITIONS(${VRN_DEFINITIONS} ${VRN_MODULE_DEFINITIONS})
INCLUDE_DIRECTORIES(${VRN_INCLUDE_DIRECTORIES} ${VRN_MODULE_INCLUDE_DIRECTORIES})
TARGET_LINK_LIBRARIES(3mview tgt voreen_core voreen_qt ${VRN_EXTERNAL_LIBRARIES})

# add Qt dependency
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})
TARGET_LINK_LIBRARIES(3mview ${QT_LIBRARIES})

TARGET_LINK_LIBRARIES(3mview CGAL gmp mpfr)

# add OpenBabel dependency
TARGET_LINK_LIBRARIES(3mview openbabel)

# add Boost dependency
TARGET_LINK_LIBRARIES(3mview ${BOOST_LIBRARIES})
